# mathilde-sdk-rs

./: .env.example  .gitignore  .gitignore copy  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  README_old.md  build.rs  inventory.md  package.json  readme_notes.md  release.toml  todo.md
.github/workflows/: ci.yml
examples/: README.md  basic_api.rs  documenation.rs  files.rs  latest.rs  range.rs  search.rs  status.rs  time_machine.rs  transport.rs  ws.rs
examples/docs/: inventory.md
examples/worflows/: bounded_recent_window.rs  current_downside_state.rs  current_grouped_regime_state.rs  measured_local_stress_context.rs  reproducible_monthly_research.rs  understanding_system.rs
examples/workflows/: due_diligence_review_packs.rs  understanding_system.rs
src/: lib.rs
src/core/: auth.rs  config.rs  error.rs  mod.rs  pagination.rs  time.rs
src/core/docs/: inventory.md
src/streaming/: make_before_break.rs  mod.rs  subscription.rs
src/streaming/docs/: inventory.md
src/systems/: compute_proto.rs  helpers.rs  mod.rs  types.rs
src/systems/aggregator/: bars_grpc.rs  bars_http.rs  bars_pagination.rs  bars_ws.rs  client.rs  docs.rs  files.rs  messages_ws.rs  mod.rs  pairs.rs  types.rs
src/systems/docs/: inventory.md
src/systems/intro/: client.rs  intro.rs  mod.rs
src/systems/primitives/: client.rs  docs.rs  files.rs  messages_ws.rs  mod.rs  outputs_grpc.rs  outputs_http.rs  outputs_pagination.rs  outputs_ws.rs  pairs.rs  types.rs
src/systems/regime/: client.rs  docs.rs  files.rs  mod.rs  outputs_grpc.rs  outputs_http.rs  outputs_pagination.rs  outputs_ws.rs  pairs.rs  types.rs
src/tests/: mod.rs  test_aggregator_public_grpc_latest.rs  test_aggregator_public_grpc_range.rs  test_aggregator_public_grpc_search.rs  test_aggregator_public_grpc_time_machine.rs  test_aggregator_public_http_latest.rs  test_aggregator_public_http_range.rs  test_aggregator_public_http_search.rs  test_aggregator_public_http_simple_discovery.rs  test_aggregator_public_http_time_machine.rs  test_aggregator_public_ws_bars.rs  test_core_pagination.rs  test_intro_public_http_intro.rs  test_primitives_docs.rs  test_primitives_outputs_grpc.rs  test_primitives_outputs_pagination.rs  test_primitives_outputs_ws.rs  test_primitives_public_grpc_latest.rs  test_primitives_public_grpc_range.rs  test_primitives_public_grpc_search.rs  test_primitives_public_grpc_time_machine.rs  test_primitives_public_http_files_downloads.rs  test_primitives_public_http_latest.rs  test_primitives_public_http_search.rs  test_primitives_public_http_simple_discovery.rs  test_primitives_public_ws_outputs.rs  test_primitives_types.rs  test_regime_docs.rs  test_regime_outputs_http.rs  test_regime_public_grpc_latest.rs  test_regime_public_grpc_range.rs  test_regime_public_grpc_search.rs  test_regime_public_grpc_time_machine.rs  test_regime_public_http_range.rs  test_regime_public_http_simple_discovery.rs  test_regime_types.rs  test_systems_helpers.rs  test_transport_grpc.rs
src/tests/contract/: grpc_test_support.rs  mod.rs  test_aggregator_public_grpc_latest.rs  test_aggregator_public_grpc_range.rs  test_aggregator_public_grpc_search.rs  test_aggregator_public_grpc_time_machine.rs  test_aggregator_public_grpc_v6_latest.rs  test_aggregator_public_grpc_v7_range.rs  test_aggregator_public_http_v0.rs  (+52 more)
src/transport/: grpc.rs  http.rs  mod.rs  ws.rs
(+5 files in other folders)
