[package]
name = "mathilde-sdk-rs"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
url = "2"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["server", "http2", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
