[package]
name = "mathilde-sdk-rs"
version = "0.0.3"
edition = "2024"

[[bin]]
name = "sdk_live_public_surface_check"
path = "bin/sdk_live_public_surface_check.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures-util = "0.3"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "rt", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
url = "2"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["server", "http2", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
